@@ -1,3 +1,7 @@
+2006-10-17  arjan <arjan at yirdis dot nl>
+
+        * gaphor/adapters/editor.py: Added Association editor.
+
 2006-09-29  arjan <arjan at yirdis dot nl>
 
         * gaphor/actions/placementactions.py: enabled Association
